<resources>
    <string name="google_maps_api_key">AIzaSyCnlG6tjeNkZ0EJvw5vg8VkD9L_QhflyqU</string>
    <string name="app_name">SafeInSelangor</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in Now</string>
    <string name="action_sign_up_short">Sign Up Now</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sign_in_desc">Sign in to use the app’s features
and feel safe </string>
    <string name="sign_up_desc">Don’t have an account?\nWhat are you waiting for?\nJoin the team! </string>
    <string name="promt_password_hint">Enter your password</string>
    <string name="just_or_line">just or line</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_example_com">email@example.com</string>
    <string name="call_bomba">call bomba</string>
    <string name="call_ambulance">call ambulance</string>
    <string name="call_police">call police</string>
    <string name="promt_confirm_password">Confirm Password</string>
    <string name="promt_confirm_password_hint">Re-Enter your password</string>
    <string name="set_up_your_page">SET UP YOUR PAGE</string>
    <string name="set_up_promt">Fill in the details below to complete your account</string>
    <string name="optional">(Optional)</string>
    <string name="add_photo">add photo</string>
    <string name="promt_first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name_example">Mike</string>
    <string name="api_key">AIzaSyCnlG6tjeNkZ0EJvw5vg8VkD9L_QhflyqU</string>
    <string name="last_name_example">Oxlong</string>
    <string name="username">Username</string>
    <string name="username_example">example123</string>
    <string name="promt_birth_date">Birth Date</string>
    <string name="birthdate_hint">DD / MM / YYYY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button_description">back</string>
    <string name="promt_name">Name</string>
    <string name="opengallery">openGallery</string>
    <string name="opencamera">openCamera</string>
    <string name="flag_content_long_text">Notice any misleading, false, or missing information?\n\n If you\'ve encountered inaccuracies or difficulties, we\'re here to help. Did you call the wrong number while trying to report to authorities?\n\n Please use the button below to drop us an email and report the issue. Your feedback is crucial in ensuring the accuracy of our information and improving the application for everyone. Thank you for helping us maintain a reliable and helpful service.</string>
    <string name="about_description">
    "Welcome to SafeInSelangor, the beacon of safety and community welfare in the heart of Malaysia. Our mission is to empower the citizens of Selangor through a dedicated platform that not only ensures safety but also upholds the pillars of justice and community well-being.

    Our application is a testament to our commitment to the United Nations Sustainable Development Goals, aligning with SDG 16.1, to significantly reduce all forms of violence, and SDG 16.7, to ensure responsive, inclusive, participatory, and representative decision-making at all levels.

    With SafeInSelangor, we provide a sanctuary of resources and tools designed to educate, alert, and protect our users. From real-time safety alerts to community support networks, we are at the forefront of combating violence and fostering a culture of peace and safety.

    Our dedication goes beyond the app – we are committed to fostering a community where every voice is heard, every concern is addressed, and every resident is an active participant in shaping a safer Selangor. We stand for a future where technology is a force for good, where data and connectivity pave the way for enlightened decision-making and where the well-being of our community is the cornerstone of progress.

    Join us on this journey. Together, we can achieve the vision of SDG 16 – to promote peaceful and inclusive societies for sustainable development, provide access to justice for all, and build effective, accountable institutions at all levels."
</string>
    <string name="deactivate_text">Are you sure you want to deactivate your account?\n\n You’re about to start the process of deactivating your SafeInSelangor account, your public profile won’t be viewable after deactivation.</string>

</resources>