<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_gravity="center">

    <RelativeLayout
        android:id="@+id/emergencyButtonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="56dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/callPolice"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:contentDescription="@string/call_police"
            android:focusable="true"

            android:src="@drawable/royal_malaysian_police" />

        <ImageView
            android:id="@+id/callAmbulance"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/callPolice"
            android:clickable="true"
            android:contentDescription="@string/call_ambulance"
            android:focusable="true"
            android:src="@drawable/emr_ambulance_logo" />

        <ImageView
            android:id="@+id/callBomba"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/callAmbulance"
            android:clickable="true"
            android:contentDescription="@string/call_bomba"
            android:focusable="true"
            android:src="@drawable/bomba_logo" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emergencyButtonsContainer"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="@color/red_theme_color"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/sign_in_desc"
            android:textStyle="bold"
            android:textColor="@color/gray_theme_color"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/prompt_email"
            android:textColor="@color/gray_theme_color"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_loginActivity"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/email_example_com"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/ic_email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/prompt_password"
            android:textColor="@color/gray_theme_color"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/password_loginActivity"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/promt_password_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_password"/>

        <Button
            android:id="@+id/login_loginActivity"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="44dp"
            android:text="@string/action_sign_in_short"
            style="@style/RedButtonStyle"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/or_line"
            android:contentDescription="@string/just_or_line"/>

        <Button
            android:id="@+id/openRegister"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/action_sign_up_short"
            style="@style/WhiteButtonStyle"
            />


    </LinearLayout>

</RelativeLayout>
