<?xml version="1.0" encoding="utf-8"?>
<!-- Setup account page (Amro) -->

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightgray"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:text="@string/set_up_your_page"
        android:textStyle="bold"
        android:textColor="@color/red_theme_color"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/set_up_promt"
        android:textStyle="bold"
        android:textColor="@color/gray_theme_color"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/addPhoto"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/profile_default"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/add_photo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optional"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/promt_name"
        android:textColor="@color/gray_theme_color"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/first_name_example"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_user"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/username"
        android:textColor="@color/gray_theme_color"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/username_example"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="password"
        android:drawableEnd="@drawable/ic_user"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/promt_birth_date"
        android:textColor="@color/gray_theme_color"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/birthDate"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/birthdate_hint"
        android:inputType="date"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="date"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:drawableEnd="@drawable/ic_user"/>
    <Button
        android:id="@+id/registerSetup"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="14dp"
        android:text="@string/sign_up"
        style="@style/RedButtonStyle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>