<?xml version="1.0" encoding="utf-8"?>
<!-- Login page (Amro) -->
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@color/lightgray">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:elevation="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Need an Emergency Service?"
                android:textColor="@color/text_gray"
                android:textSize="19sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/emergencyButtonsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="56dp">


                <ImageView
                    android:id="@+id/callPolice"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:contentDescription="@string/call_police"
                    android:focusable="true"

                    android:src="@drawable/royal_malaysian_police" />

                <ImageView
                    android:id="@+id/callAmbulance"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@id/callPolice"
                    android:clickable="true"
                    android:contentDescription="@string/call_ambulance"
                    android:focusable="true"
                    android:src="@drawable/emr_ambulance_logo" />

                <ImageView
                    android:id="@+id/callBomba"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@id/callAmbulance"
                    android:clickable="true"
                    android:contentDescription="@string/call_bomba"
                    android:focusable="true"
                    android:src="@drawable/bomba_logo" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_in"
                android:textColor="@color/red_theme_color"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/sign_in_desc"
                android:textAlignment="center"
                android:textColor="@color/gray_theme_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/prompt_email"
                android:textAlignment="center"
                android:textColor="@color/gray_theme_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_loginActivity"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/email_example_com"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/prompt_password"
                android:textAlignment="center"
                android:textColor="@color/gray_theme_color"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_loginActivity"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_password"
                android:ems="10"
                android:hint="@string/promt_password_hint"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="forgot password?"
                android:textColor="@color/red_theme_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_loginActivity"
                style="@style/RedButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="44dp"
                android:text="@string/action_sign_in_short" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/just_or_line"
                android:src="@drawable/or_line" />

            <Button
                android:id="@+id/openRegister"
                style="@style/WhiteButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/action_sign_up_short" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
