<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:layout_gravity="center">


    <LinearLayout

        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="@color/red_theme_color"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="55dp"
            android:text="@string/sign_up_desc"
            android:textAlignment="center"
            android:textColor="@color/gray_theme_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/prompt_email"
            android:textAlignment="center"
            android:textColor="@color/gray_theme_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/email_example_com"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="New Password"
            android:textAlignment="center"
            android:textColor="@color/gray_theme_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_password"
            android:ems="10"
            android:hint="@string/promt_password_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/promt_confirm_password"
            android:textAlignment="center"
            android:textColor="@color/gray_theme_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_password"
            android:ems="10"
            android:hint="@string/promt_confirm_password_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/register"
            style="@style/RedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="44dp"
            android:text="@string/sign_up" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>

